[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-tool-mention-loader"
version = "1.0.0"
description = "Load file and folder context via @mention syntax for Amplifier CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Michael Jabbour", email = "michael@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.entry-points."amplifier.modules"]
mention-loader = "amplifier_module_tool_mention_loader:mount"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_mention_loader"]
